# dj-generator

./: .gitignore  README.md  pyproject.toml
dj_generator/: apps.py
dj_generator/management/commands/: generate.py
dj_generator/templates/dj_generator/curd/default/code/: urls.py  views.py
dj_generator/templates/dj_generator/curd/default/templates/: create.html  detail.html  list.html  update.html
dj_generator/templates/dj_generator/curd/power/code/: forms.py  table.py  views.py
dj_generator/templates/dj_generator/curd/power/templates/: create.html  delete_confirm.html  list.html  table_actions.html
dj_generator/templatetags/: generator_tags.py
sandbox/: settings.py  urls.py
sandbox/testapp/: models.py  urls.py
sandbox/testapp/migrations/: 0001_initial.py
sandbox/testapp/task/: forms.py  table.py  urls.py  views.py
sandbox/testapp/templates/testapp/task/: create.html  delete_confirm.html  detail.html  list.html  table_actions.html  update.html
