[tool.poetry]
name = "dj-generator"
version = "0.1.0"
description = "CURD generator for django"
authors = ["Shimul Chowdhury <shimul@divine-it.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
django-tables2 = "^2.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
